kubernetes/istio-sample/meshub/managment/ingress-vs-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy-vs
spec:
  hosts:
  - mesh-manager.vindpro.dev
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: proxy
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
spec:
  hosts:
  - kiali-manager.vindpro.dev
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
